--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@
 # Please add or remove for your needs.
 # Check all possible values for python in here: https://docs.travis-ci.com/user/languages/python/
 # See how to further configure the matrix of combinations in here: https://docs.travis-ci.com/user/multi-os/
-language: python
+language: generic
 
 # Uncomment if you need super powers (e.g., for apt-get)
 # sudo: require
@@ -11,33 +11,12 @@ language: python
 # To use other python versions in osx, set the PYTHON variable with the version supported by pyenv.
 # Check available versions with `pyenv install --list'.
 # We use in this example python >=3.4 because matplotlib requires it
-matrix:
-    include:
-        - os: linux
-          python: 2.7
-        - os: linux
-          python: 3.4
-        - os: osx
-          language: generic
-          env: PYTHON=2.7
-        - os: osx
-          language: generic
-          env: PYTHON=3.4.6
+os: linux
 
-# Command to install dependencies for each configuration.
-before_install:
-# For OSX, you may want to call a script installing virtual env and so on.
-  - ./scripts/install.sh
- 
 install:
-  - python -m pip install -U pip
-  - python -m easy_install -U setuptools
-  - pip install -U pytest
-  - pip install sphinx
-  - pip install .
-  
+  - ./scripts/ensure_latex.sh
+  - ./scripts/ensure_book_dependencies.sh
+
 # Command to run tests. These are run for each configuration
-script: 
-  - python --version
-  - pytest
-  - cd docs && make doctest SPHINXOPTS=-W #Make doctest treat warnings as errors, to detect problems in autodoc
+script:
+  - pdflatex paper.tex
