--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ language: generic
 os: linux
 
 install:
-  - ./scripts/ensure_latex.sh
+  - . ./scripts/ensure_latex.sh
   - ./scripts/ensure_book_dependencies.sh
 
 # Command to run tests. These are run for each configuration
